# lar

./: .cursorrules  .gitignore  .windsurfrules  ARCHITECTURE.md  ARCHITECTURE_CN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  IDE_INTEGRATION_PROMPT.md  IDE_MASTER_PROMPT.md  IDE_PROMPT_TEMPLATE.md  IDE_PROMPT_TEMPLATE_CN.md  LAR_MASTER_PROMPT.md  LICENSE  NOTICE  README.md  README_CN.md  RELEASE_NOTES_v1.1.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  SECURITY.md  SECURITY_CN.md  VISION_&_PHILOSOPHY.md  Vision_and_Philosophy.md  Vision_and_Philosophy_CN.md  api.py  claude.md  lar_showcase_agent_v0.7.1.json  mkdocs.yml  my_agent_v1.json  prompt.txt  pyproject.toml  simple_agent.py  snath_app.py  stress_test.py  tree.txt  visualizer_app.py
.github/: CODEOWNERS
changelog/: RELEASE_NOTES_v1.1.1_CN.md  RELEASE_NOTES_v1.1_CN.md  RELEASE_NOTES_v1.2.0_CN.md  RELEASE_NOTES_v1.3.0_CN.md  RELEASE_NOTES_v1.3.1_CN.md  RELEASE_NOTES_v1.3.2_CN.md  RELEASE_NOTES_v1.4.0_CN.md  RELEASE_NOTES_v1.4.1_CN.md  RELEASE_NOTES_v1.5.0_CN.md  RELEASE_NOTES_v1.5.1_CN.md  RELEASE_NOTES_v1.6.0_CN.md  RELEASE_NOTES_v1.7.0_CN.md
clinical_audit_logs/: run_11a1690b-5473-4184-a7e9-f86e2ecaf1f8.json  run_dccd9e16-1043-48fb-a21a-59830bc27682.json
docs/: compliance.md  compliance_CN.md  getting-started.md  getting-started_CN.md  ide_setup.md  ide_setup_CN.md  index.md  index_CN.md  llms.txt  llms_CN.txt  production.md
examples/: 14_parallel_newsroom.py  15_parallel_corporate_swarm.py  16_integration_test.py  17_ab_tester.py  18_resumable_graph.py  19_fastapi_server.py  1_simple_triage.py  20_juried_layer.py  22_context_contamination_test.py  23_zombie_action_test.py  5_parallel_execution.py  7_multi_agent_handoff.py  9_corporate_swarm.py
(+130 files in other folders)
